added till build 216

--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -87,7 +87,6 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 
 ### Improvements
 
-* Make Service Account non default in the UI
 * [PLAT-513] Specify user to provide VPC name while selecting for GCP provider
 * [PLAT-2421] Make Kubernetes Settings Configurable via Runtime Config
 * [PLAT-4054] Run sass-migrator to convert stylesheets to use Sass module system
@@ -221,6 +220,7 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 * [PLAT-7455] Add runtime config at the provider level for enabling node-agent
 * [PLAT-7505] Expose node-agent logging properties like debug level in config file
 * [PLAT-7523] Handle system specific systemd units in SLES
+* [PLAT-7528] [PLAT-7323] Airgapped cloud provider hardening
 * [PLAT-7652] Modify the GCP project preferences
 * [PLAT-7665] Expand volumes before other edits on universe
 * [PLAT-7682] Bump up prometheus/postgres version
@@ -229,14 +229,19 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 * [PLAT-7764] Retain master instance type and device info in case of edit universe
 * [PLAT-7791] Remove the peer cert validation when working with http standby instance
 * [PLAT-7893]: Update YBC version to 1.0.0-b18
+* [PLAT-7906] Enabling Prefill k8s on 2.17.2
+* [PLAT-7918] Removed outdated priority_regex param from yba-installer prom config to make it use params from swamper target files
+* [PLAT-7935] Add ansible comment for cron job added via YBC Upgrade
+* [PLAT-7942] Update yba-installer to use prometheus 2.42.0
 * [PLAT] Add perf-advisor integration with platform scheduler
 * [PLAT] Add runtime config metadata to java code
 * [PLAT] Add support for Suse in YBA
 * [PLAT] Add support to invoke debugging hooks if present in k8s_parent.py.
 * [PLAT] Make data validation and scope strictness runtime config
 * [PLAT] Show appropriate error message when editing runtime configs
-* [Platform] Service Account related changes for YB platform GKE app
-* [Platform] Use the previous name for x86_64 checksum
+* Service Account related changes for YB platform GKE app
+* Use the previous name for x86_64 checksum
+* Make Service Account non default in the UI
 
 ### Bug fixes
 
