--- a/docs/content/preview/releases/release-notes/v2.17.md
+++ b/docs/content/preview/releases/release-notes/v2.17.md
@@ -26,7 +26,7 @@ Included here are the release notes for the YugabyteDB v2.17 release series. Con
 
 For an RSS feed of all release series, point your feed reader to the [RSS feed for releases](../../index.xml).
 
-## v2.17.2.0 - March 25, 2023 {#v2.17.2.0}
+## v2.17.2.0 - March 23, 2023 {#v2.17.2.0}
 
 **Build:** `2.17.2.0-b216`
 
@@ -77,7 +77,6 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 
 ### Improvements
 
-[[16018](https://github.com/yugabyte/yugabyte-db/issues/16018)] [xCluster] Add null check for Consensus in cdc_producer
 * [[3943](https://github.com/yugabyte/yugabyte-db/issues/3943)] [YSQL] Support renaming constraints
 * [[7376](https://github.com/yugabyte/yugabyte-db/issues/7376)] [YSQL] track catalog version in pgstat
 * [[10595](https://github.com/yugabyte/yugabyte-db/issues/10595)] [YSQL] Add progress reporting for create index commands
@@ -136,6 +135,7 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 * [[15947](https://github.com/yugabyte/yugabyte-db/issues/15947)] [DocDB] Pass index_map as a shared pointer to WriteQuery::QLWriteOperation
 * [[15977](https://github.com/yugabyte/yugabyte-db/issues/15977)] [YSQL] Import PostgreSQL commits for log_statement_sample_rate and log_min_duration_sample
 * [[16015](https://github.com/yugabyte/yugabyte-db/issues/16015)] [DocDB] Make ysql_enable_packed_row a gflag
+* [[16018](https://github.com/yugabyte/yugabyte-db/issues/16018)] [xCluster] Add null check for Consensus in cdc_producer
 * [[16027](https://github.com/yugabyte/yugabyte-db/issues/16027)] [DocDB] Add optional logging on transaction error
 * [[16028](https://github.com/yugabyte/yugabyte-db/issues/16028)] [DocDB] Move read_time_wait metric to be table-level
 * [[16045](https://github.com/yugabyte/yugabyte-db/issues/16045)] [YSQL] Import PostgreSQL commits for log_transaction_sample_rate
