[PLAT-7943]: Add Beta tag for Dedicated masters node feature
Summary: Add BETA label for dedicated nodes

Test Plan:
Please refer to the screenshot
{F36135}

Reviewers: jmak

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23936

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -1,6 +1,7 @@
 {
   "translation": {
     "common": {
+      "beta": "Beta",
       "apply": "Apply",
       "cancel": "Cancel",
       "confirm": "Confirm",
