Sankey chart refactor and show available cores

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -728,6 +728,9 @@
         "diskUsage": "Disk Usage",
         "used": "Used",
         "usage": "Usage",
+        "cores": "cores",
+        "usageCores": "Usage {{usage}} cores",
+        "availableCores": "Available {{available}} cores",
         "available": "Available",
         "usedDiskText": "{{usedDiskSizeGb}} GB used",
         "freeDiskText": "{{freeDiskSizeGb}} GB free out of {{totalDiskSizeGb}} GB",
@@ -739,6 +742,7 @@
         "noActivities": "No in progress activities",
         "alerts": "Alerts",
         "noAlerts": "No unread alerts",
+        "comingsoon": "This feature is coming soon",
         "underReplicated": "Under-Replicated",
         "unavailable": "Unavailable"
       },
@@ -746,6 +750,7 @@
         "numTables": "{{count}} Table",
         "numTables_plural": "{{count}} Tables",
         "noTablesCopy": "You do not have any tables",
+        "noTabletsCopy": "You do not have any tablets",
         "filterKeyword": "Filter by keyword",
         "tableName": "Table Name",
         "keyspace": "Keyspace",
