--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -34,7 +34,7 @@ For an RSS feed of all release series, point your feed reader to the [RSS feed f
 docker pull yugabytedb/yugabyte:2.17.3.0-b142
 ```
 
-## New Features
+### New Features
 
 * [PLAT-3634] Making logging controller authenticated.
 * [PLAT-3884] Add support for TLS-enabled universes
@@ -111,7 +111,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT] Enable data validation and scope strictness for runtime config
 * Add support for Suse in YBA
 
-## Improvements
+### Improvements
 
 * [PLAT-513] Specify user to provide VPC name while selecting for GCP provider
 * [PLAT-2187] Platform API should not permit the creation of Universes with invalid placement_uuid
@@ -219,9 +219,9 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-8168] Certificates from Hashicorp Vault should only have one level wildcard
 * [PLAT-8196] Persist skipProvisioning value if specified for onprem nodes
 * [PLAT] Use the previous name for x86_64 checksum
-Combined Change for for [PLAT-7770] and Service Account being non default in UI
+* Combined change for [PLAT-7770] and Service Account being non default in UI
 
-## Bugs
+### Bug fixes
 
 * [CLOUDGA-12305] Missing getters for provider fields - Part 2
 * [PLAT-4366] [PLAT-6784] [PLAT-6900] [PLAT-7742] [PLAT-7605] [PLAT-7787] [PLAT-7809] Handling BufferUnderflowException issues, Fix backup issues after k8s universe upgrade
@@ -303,6 +303,9 @@ Combined Change for for [PLAT-7770] and Service Account being non default in UI
 * [PLAT-8196] [PLAT-8197] Add missing form values to mutate on prem provider payload
 syncFileData UT failure fix
 
+### Known issues
+
+N/A
 ## v2.17.2.0 - March 27, 2023 {#v2.17.2.0}
 
 **Build:** `2.17.2.0-b216`
@@ -599,6 +602,10 @@ docker pull yugabytedb/yugabyte:2.17.2.0-b216
 * [PLAT-7784] Fix NPE in PlacementInfoUtil when instanceType is null
 * [PLAT] Fix broken YBA metrics collection
 * [PLAT] Fix compile error in perf advisor node manager
+
+### Known issues
+
+N/A
 
 ## v2.17.1.0 - February 7, 2023 {#v2.17.1.0}
 
