--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -359,7 +359,7 @@
       "customVariables": {
         "addNewVariableText": "Create your own variables with <bold> customized value </bold> to use in the notification templates.",
         "createNewVariableButton": "Create Custom Variable",
-        "customVariables":"Custom Variables",
+        "customVariables": "Custom Variables",
         "systemVariables": "System Variables",
         "assignVariablesButton": "Assign Variable Value to Alert Policies",
         "customVariableContextMenu": {
@@ -395,16 +395,25 @@
         "insertVariableButton": "Insert Variable",
         "previewTemplateButton": "Preview Notification Template",
         "templateSavedSuccess": "Template saved successfully",
-        "emailTemplate": "Email Template"
+        "emailTemplate": "Email Template",
+        "webhookTemplate": "Webhook Template",
+        "webhookComposer": {
+          "rollback": "Rollback to Default Template",
+          "clearTemplate": "Clear Template"
+        }
       },
       "customVariablesPlugin": {
         "sysOrCusVariable": "{{variable_type}} VAR",
         "alertValueNotFound": "No value found"
       },
       "alertVariablesPreviewModal": {
-        "modalTitle":"Preview Notification Template",
-        "info":"Choose the Alert Template to preview with the Email Notification Template.",
+        "modalTitle": "Preview Notification Template",
+        "info": "Choose the Alert Template to preview with the Email Notification Template.",
         "selectPlaceholder": "Select an alert configuration"
+      },
+      "rollbackModal": {
+        "title": "Rollback to Default Template",
+        "helpText": "Rollback to default template will discard your current edits and revert the template back to the out-of-box version. Do you want to proceed? "
       }
     },
     "alertPolicyDetails": {
