addressed some comments

--- a/docs/content/preview/releases/release-notes/v2.17.md
+++ b/docs/content/preview/releases/release-notes/v2.17.md
@@ -539,7 +539,7 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [[10584](https://github.com/yugabyte/yugabyte-db/issues/10584)] [DocDB] Update precompiled headers, remove unnecessary includes
 * [[10821](https://github.com/yugabyte/yugabyte-db/issues/10821)] [YSQL] Cache sys catalog read request on local t-server side
 * [[11849](https://github.com/yugabyte/yugabyte-db/issues/11849)] [YSQL] Add distributed storage access statistics to EXPLAIN ANALYZE
-* [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] Restore "support concurrent DDL across databases (part 5)"
+* [[12417](https://github.com/yugabyte/yugabyte-db/issues/12417)] [YSQL] support concurrent DDL across databases
 * [[12735](https://github.com/yugabyte/yugabyte-db/issues/12735)] [YSQL] Add cluster option to support colocation on-by-default on database
 * [[12791](https://github.com/yugabyte/yugabyte-db/issues/12791)] [YSQL] Add support for create table like clause
 * [[12953](https://github.com/yugabyte/yugabyte-db/issues/12953)] [YSQL] Populate query termination entry in pg_stat with OOM and seg fault errors
