--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -48,8 +48,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-5734] Support EAR enabled universes for attach/detach
 * [PLAT-5796] [YBA Enablement] Cloud Provider Config - Onprem(sudo, non-sudo)
 * [PLAT-5888] [PLAT-5889] Adding Re-encryption modules for all KMS providers universe key
-* [PLAT-6559] Add create on prem provider form
-* [PLAT-6559] Apply universe tab stylings to provider tabs
+* [PLAT-6559] Add create on prem provider form and apply universe tab stylings to provider tabs
 * [PLAT-6598] Add support for choosing arch type in AWS providers
 * [PLAT-6599] Adding ARM https release by default.
 * [PLAT-6626] Add Region to existing provider
@@ -190,7 +189,6 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7712] Remove wizard flow for create and edit universe
 * [PLAT-7730] File upload UI improvments
 * [PLAT-7730] Use flex-start instead of start
-* [PLAT-7734] Disable delete provider action when provider in use
 * [PLAT-7734] Disable delete provider action when provider is in use.
 * [PLAT-7744] [xCluster] Update listTables to allow tables in dbs with colocation to be excluded
 * [PLAT-7758] Read inherited configs when checking for provider_redesign feature flag
@@ -238,8 +236,7 @@ docker pull yugabytedb/yugabyte:2.17.3.0-b142
 * [PLAT-7313] [PLAT-7632] PITR improvements and fixes
 * [PLAT-7359] Fix skip validation submission for AWS create provider
 * [PLAT-7410] Fix deeplink of CPU and Disk Usage to appropriate metrics section
-* [PLAT-7411] [PLAT-7725] - fix for enable/disable volume controls/User cannot change placements
-* [PLAT-7411] [PLAT-7753] [PLAT-7763] - fix  Enable/disable volume controls, AZ Placements issue, issue with cancel button in universe form.
+* [PLAT-7411] [PLAT-7725] [PLAT-7753] [PLAT-7763] - fix  Enable/disable volume controls, AZ Placements issue, issue with cancel button in universe form.
 * [PLAT-7414] Legends are not displaying proper on moving back to Metrics page
 * [PLAT-7423] Make all inter-container communication go through docker gateway + fix YBA scraping
 * [PLAT-7428] [PLAT-5885] [PLAT-5887] [MKR] KMS creation improvement and fixes
