--- a/docs/content/preview/releases/release-notes/v2.16.md
+++ b/docs/content/preview/releases/release-notes/v2.16.md
@@ -32,25 +32,25 @@ If you're using a previous v2.16 database version, you won't be able to successf
 
 ## v2.16.3.0 - April 6, 2023 {#v2.16.3.0}
 
-**Build:** `2.16.3.0-b38`
+**Build:** `2.17.3.0-b43`
 
-**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-2.16.3.0-b38-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-anywhere-2.16.3.0-b38-third-party-licenses.html)
+**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-2.17.3.0-b43-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-anywhere-2.17.3.0-b43-third-party-licenses.html)
 
 ### Downloads
 
 <ul class="nav yb-pills">
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.16.3.0-b38-darwin-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.17.3.0-b43-darwin-x86_64.tar.gz">
         <i class="fa-brands fa-apple"></i><span>macOS</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.16.3.0-b38-linux-x86_64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.17.3.0-b43-linux-x86_64.tar.gz">
         <i class="fa-brands fa-linux"></i><span>Linux x86</span>
     </a>
   </li>
   <li>
-    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.16.3.0-b38-el8-aarch64.tar.gz">
+    <a href="https://downloads.yugabyte.com/releases/2.16.3.0/yugabyte-2.17.3.0-b43-el8-aarch64.tar.gz">
         <i class="fa-brands fa-linux"></i><span>Linux ARM</span>
     </a>
   </li>
@@ -59,7 +59,7 @@ If you're using a previous v2.16 database version, you won't be able to successf
 ### Docker
 
 ```sh
-docker pull yugabytedb/yugabyte:2.16.3.0-b38
+docker pull yugabytedb/yugabyte:2.17.3.0-b43
 ```
 
 ### New features
@@ -99,6 +99,7 @@ docker pull yugabytedb/yugabyte:2.16.3.0-b38
 * [[15220](https://github.com/yugabyte/yugabyte-db/issues/15220)] [[15786](https://github.com/yugabyte/yugabyte-db/issues/15786)] [[15947](https://github.com/yugabyte/yugabyte-db/issues/15947)] [DocDB] Fix apply-operation timeout during schema changes
 * [[15286](https://github.com/yugabyte/yugabyte-db/issues/15286)] [YSQL] Fix premature return in PG_TRY block in relcache.c
 * [[15528](https://github.com/yugabyte/yugabyte-db/issues/15528)] [DocDB] Fix usage of Connectionoutbound_data_being_processed_ during Shutdown
+* [[15740](https://github.com/yugabyte/yugabyte-db/issues/15740)] [CDCSDK] Failed to decode Before image record with packed row enabled and multiple table alter
 * [[16048](https://github.com/yugabyte/yugabyte-db/issues/16048)] [YSQL] Fix regression in performance of queries returning large columns
 * [[16151](https://github.com/yugabyte/yugabyte-db/issues/16151)] [DocDB] Fix incorrect iteration over modified set in CleanupAbortsTaskRun
 * [[16173](https://github.com/yugabyte/yugabyte-db/issues/16173)] [DocDB] Cluster creation is failing on Mac
