--- a/docs/content/preview/releases/yba-releases/v2.16.md
+++ b/docs/content/preview/releases/yba-releases/v2.16.md
@@ -31,14 +31,14 @@ If you're using a previous v2.16 database version, you won't be able to successf
 
 ## v2.16.3.0 - April 6, 2023 {#v2.16.3.0}
 
-**Build:** `2.16.3.0-b38`
+**Build:** `2.16.3.0-b43`
 
-**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-2.16.3.0-b38-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-anywhere-2.16.3.0-b38-third-party-licenses.html)
+**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-2.16.3.0-b43-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.16.3.0/yugabytedb-anywhere-2.16.3.0-b43-third-party-licenses.html)
 
 ### Docker
 
 ```sh
-docker pull yugabytedb/yugabyte:2.16.3.0-b38
+docker pull yugabytedb/yugabyte:2.16.3.0-b43
 ```
 
 ## New features
@@ -74,7 +74,7 @@ docker pull yugabytedb/yugabyte:2.16.3.0-b38
 * [PLAT-7561] Retry read write check in case of failure
 * [PLAT-7987] Older Task Details displays the current task in execution
 * [PLAT-8006] Fix issue in fetching platform logs on clicking any of the task from the tasks tab
-* [PLAT-8143] Fixed duplicate metrics from kube-state-metrics
+* [PLAT-8266] Ensure date time format is handled when deeplinking to logs page
 
 ### Known issues
 
