--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -393,7 +393,7 @@
       "composer": {
         "subject": "Subject",
         "content": "Content",
-        "helpText": "All Alert Policies that generate email alerts will use this notification template.",
+        "helpText": "All Alert Policies that generate {{type}} alerts will use this notification template.",
         "insertVariableButton": "Insert Variable",
         "previewTemplateButton": "Preview Notification Template",
         "templateSavedSuccess": "Template saved successfully",
