missed Known issues

--- a/docs/content/preview/releases/release-notes/v2.16.md
+++ b/docs/content/preview/releases/release-notes/v2.16.md
@@ -112,6 +112,10 @@ docker pull yugabytedb/yugabyte:2.16.3.0-b43
 * [DocDB] fix leader ht lease exp under leader only mode
 * fix  Added missing name attribute for replication factor field
 
+### Known issues
+
+N/A
+
 ## v2.16.2.0 - March 7, 2023 {#v2.16.2.0}
 
 **Build:** `2.16.2.0-b41`
