[docs]changed incorrect date for 2.16.3.0 releases (#16922)
* changed date

* missed Known issues

--- a/docs/content/preview/releases/release-notes/v2.16.md
+++ b/docs/content/preview/releases/release-notes/v2.16.md
@@ -30,7 +30,7 @@ YugabyteDB releases in the v2.16 series prior to v2.16.1.1 contain a backup issu
 If you're using a previous v2.16 database version, you won't be able to successfully perform backups until you upgrade to YugabyteDB 2.16.1.1 or later.
 {{< /warning >}}
 
-## v2.16.3.0 - April 6, 2023 {#v2.16.3.0}
+## v2.16.3.0 - April 18, 2023 {#v2.16.3.0}
 
 **Build:** `2.16.3.0-b43`
 
@@ -111,6 +111,10 @@ docker pull yugabytedb/yugabyte:2.16.3.0-b43
 * [DocDB] Fix deadlock with YqlPartitionsVTable
 * [DocDB] fix leader ht lease exp under leader only mode
 * fix  Added missing name attribute for replication factor field
+
+### Known issues
+
+N/A
 
 ## v2.16.2.0 - March 7, 2023 {#v2.16.2.0}
 
