--- a/docs/content/preview/releases/release-notes/v2.14.md
+++ b/docs/content/preview/releases/release-notes/v2.14.md
@@ -17,6 +17,72 @@ Included here are the release notes for the v2.14 release series. Content will b
 
 For an RSS feed of all release series, point your feed reader to the [RSS feed for releases](../../index.xml).
 
+## v2.14.9.0 - April 25, 2023 {#v2.14.9.0}
+
+**Build:** `2.14.9.0-b15`
+
+**Third-party licenses:** [YugabyteDB](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-2.14.9.0-b15-third-party-licenses.html), [YugabyteDB Anywhere](https://downloads.yugabyte.com/releases/2.14.9.0/yugabytedb-anywhere-2.14.9.0-b15-third-party-licenses.html)
+
+### Downloads
+
+<ul class="nav yb-pills">
+  <li>
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-darwin-x86_64.tar.gz">
+        <i class="fa-brands fa-apple"></i><span>macOS</span>
+    </a>
+  </li>
+  <li>
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-linux-x86_64.tar.gz">
+        <i class="fa-brands fa-linux"></i><span>Linux x86</span>
+    </a>
+  </li>
+  <li>
+    <a href="https://downloads.yugabyte.com/releases/2.14.9.0/yugabyte-2.14.9.0-b15-el8-aarch64.tar.gz">
+        <i class="fa-brands fa-linux"></i><span>Linux ARM</span>
+    </a>
+  </li>
+</ul>
+
+### Docker
+
+```sh
+docker pull yugabytedb/yugabyte:2.14.9.0-b15
+```
+
+### Improvements
+
+#### Database
+
+* [[506](https://github.com/yugabyte/yugabyte-db/issues/506)] [YCQL] Disable alter table rename on columns with index
+* [[3090](https://github.com/yugabyte/yugabyte-db/issues/3090)] [YCQL] Limit topology change events to subscribed connections
+* [[12826](https://github.com/yugabyte/yugabyte-db/issues/12826)] [[16571](https://github.com/yugabyte/yugabyte-db/issues/16571)] [DocDB] Support traces to be enabled based on sampling
+* [[13718](https://github.com/yugabyte/yugabyte-db/issues/13718)] [DocDB] Remove const modifier for iterator HasNext and GetNextReadSubDocKey
+* [[14886](https://github.com/yugabyte/yugabyte-db/issues/14886)] [DocDB] Adds compaction types to compaction task metrics
+* [[15705](https://github.com/yugabyte/yugabyte-db/issues/15705)] [CDCSDK] Update CDCSDK checkpoint non-actionable replicated messages in WAL
+* [[16091](https://github.com/yugabyte/yugabyte-db/issues/16091)] [DocDB] Changing post-split compaction to run non-exclusively
+* [[16581](https://github.com/yugabyte/yugabyte-db/issues/16581)] [DocDB] Remove outstanding tablet split limit by default.
+* [[16666](https://github.com/yugabyte/yugabyte-db/issues/16666)] [YSQL] Switch to new query context for get_tablespace_distance() operations
+* [[16868](https://github.com/yugabyte/yugabyte-db/issues/16868)] [DocDB] Sanitizes debug messages
+
+#### YugabyteDB Anywhere
+
+* [PLAT-7540] Make default_memory_limit_to_ram_ratio flag not hidden
+* [PLAT-7552] Logging of secret credentials in application.log for provider with custom ssh_key
+* [PLAT-7607] Support for table by table backup in YCQL
+* [PLAT-8319] UI Support for table by table backup
+* [PLAT-8363] Put alert rule strings in double quotes
+* [PLAT-8419] Use bulk fetch instead of SQL query for every row of task info in commissioner class
+
+### Bugs
+
+#### Database
+
+* [[15090](https://github.com/yugabyte/yugabyte-db/issues/15090)] [DocDB] Tablet splitting: Some queries fail with "The tablet is shutting down" during the workload
+* [[15220](https://github.com/yugabyte/yugabyte-db/issues/15220)] [[15786](https://github.com/yugabyte/yugabyte-db/issues/15786)] [[15947](https://github.com/yugabyte/yugabyte-db/issues/15947)] [DocDB] Fix apply-operation timeout during schema changes
+* [[16444](https://github.com/yugabyte/yugabyte-db/issues/16444)] [DocDB] Ignore heartbeats from peers not in reported config
+* [[16789](https://github.com/yugabyte/yugabyte-db/issues/16789)] [YSQL] Assume that CAPABILITY_PickReadTimeAtTabletServer is enabled all the time
+* Re-used master nodes are not reinitialized, leading to under-replication
+
 ## v2.14.8.0 - April 4, 2023 {#v2.14.8.0}
 
 **Build:** `2.14.8.0-b17`
