Improve handling for LDAP strings in ysql_hba_conf_csv
Summary:
Configuring LDAP authentication for YSQL is extremely challenging for customers. There are a lot of obscure quoting and formatting rules that need to be followed.

I have yet to see a customer get this right the first time which generates a lot of ticket volume.

It would be helpful to have a GUI configuration (with a test button!) that can apply the requested LDAP configuration directly to the nodes. In the short term, perhaps we could provide a string builder UI that
will accept all of the required and optional parameters, then generate a pre-escaped string that can be pasted directly into the GFlag configuration.

UX requirements
1. Separate each record field into a separate input (row) so users don’t have to concatenate the strings which involves complicated syntax with commas, 2x double quotation marks, etc.
2. Validate each input row for syntax (static validation).
3. Wrap text if input exceeds a row.
4. Allow drag and drop for re-ordering of the rows/record fields.
5. Low priority - User can preview the concatenated value.

See interactive prototype & Figma handoff file.

Test Plan:
Please refer to the video
{F36382}

Reviewers: jmak

Reviewed By: jmak

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D24254

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -150,6 +150,8 @@
         "modalTitle": "Delete Read Replica of {{universeName}}"
       },
       "gFlags": {
+        "edit": "Edit",
+        "preview": "Preview",
         "addFlag": "Add Flag",
         "addGflags": "Add Flags",
         "addJson": "Add as JSON",
@@ -170,7 +172,14 @@
         "selectedDBVersion": "Selected DB Version : ",
         "title": "G-Flags",
         "tServerValue": "T-SERVER VALUE",
-        "validationError": "Fix all the errors shown below to proceed"
+        "addRow": "Add Row",
+        "validationError": "Fix all the errors shown below to proceed",
+        "hbaLDAPConflocal": "local database user auth-method [auth-options]",
+        "hbaLDAPConfHost": "host database user address auth-method [auth-options]",
+        "hbaLDAPConfHostSSL": "hostssl database user IP-address auth-method [auth-options]",
+        "LDAPMissingAttributeValue": "Missing value for the attribute",
+        "LDAPMissingQuote": "Attribute value should be enclosed in quotes",
+        "nonASCIIDetected": "Non-ASCII value detected"
       },
       "helmOverrides": {
         "addK8sOverrides": "Add Kubernetes Overrides",
