[BACKPORT 2.18][PLAT-8478][PLAT-8491]: Sort recommendation by table name and change label for last scan date
Summary:
1. Add sort order for for Unused Indexes and Schema Suggestions
2. Changed label from "Current Scan" to "Latest Scan"

Test Plan:
Please refer to the video
{F36857}

Reviewers: jmak

Reviewed By: jmak

Subscribers: yugaware, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D24816

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -299,7 +299,7 @@
           "ScanBtn": "Scan",
           "ReScanBtn": "Re-Scan",
           "Hurray": "Hurray",
-          "ScanTime": "Current Scan",
+          "ScanTime": "Last Scanned",
           "DBScanFailed": "Failed to scan the database. Try again later."
         },
         "typeTag": {
