--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -381,7 +381,8 @@
           "values": "Values",
           "default": "Default",
           "addValuesButton": "Add Values",
-          "valuesHelpText": "Define the possible values for the variable. Set one of the values as the <bold>default</bold> to use for all alerts that use the notification template. You can choose a value when configuring the alert policy."
+          "valuesHelpText": "Define the possible values for the variable. Set one of the values as the <bold>default</bold> to use for all alerts that use the notification template. You can choose a value when configuring the alert policy.",
+          "nameError":"Name should contain only alphanumeric and _(underscore)"
         },
         "assignCustomVariableValueModal": {
           "title": "Assign Variable Value to Alert Policies",
@@ -394,7 +395,7 @@
       "composer": {
         "subject": "Subject",
         "content": "Content",
-        "helpText": "All Alert Policies that generate email alerts will use this notification template.",
+        "helpText": "All Alert Policies that generate {{type}} alerts will use this notification template.",
         "insertVariableButton": "Insert Variable",
         "previewTemplateButton": "Preview Notification Template",
         "templateSavedSuccess": "Template saved successfully",
@@ -403,7 +404,8 @@
         "webhookComposer": {
           "rollback": "Rollback to Default Template",
           "clearTemplate": "Clear Template"
-        }
+        },
+        "invalidVariables": "Variables {{variable}} not found"
       },
       "customVariablesPlugin": {
         "sysOrCusVariable": "{{variable_type}} VAR",
